--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "learning react by akshay saini",
   "scripts": {
-    "start": "parcel index.html --port 3000",
+    "start": "parcel index.html --port 2000",
     "build": "parcel build index.html",
     "test": "jest"
   },
@@ -25,13 +25,19 @@
   },
   "homepage": "https://github.com/nik5526/learning-react#readme",
   "devDependencies": {
-    "parcel": "^2.15.4"
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
+    "parcel": "^2.16.0"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tailwindcss": "^4.1.13"
   },
   "browserlist": [
     "last 2 version"
